@@ -1,3 +1,8 @@
+2001-02-12  Robin * Slomkowski  <rslomkow@eazel.com>
+
+	* nautilus.spec.in: merged changes from branch into
+	head BUG 6067
+
 2001-02-11  Michael K. Fleming  <mfleming@eazel.com>
 
 	reviewed by: <sullivan@eazel.com>
